appId: im.status.ethereum.pr
---
- tapOn: "profile-picture"
- tapOn: "password-input"
- inputText: "password123"
- tapOn: "Log in"
